syntax = "proto3";

package packets;
option go_package = "pkg/packets";


service GameService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Echo(EchoRequest) returns (EchoResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2; // Later replace with hashed/token.
}

message LoginResponse {
  bool success = 1;
  string message = 2;
}

message EchoRequest {
  string text = 1;
}

message EchoResponse {
  string text = 1;
}

message ChatMessage { string msg = 1; }
message IdMessage { uint64 id = 1; }

// Define the main Packet message
message Packet {
    uint64 sender_id = 1;
    oneof msg {
        ChatMessage chat = 2;
        IdMessage id = 3;
    }
}